# water-splatting

./: .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.py
.assets/: curasao-obj.webm  curasao.webm
water_splatting/: __init__.py  _torch_impl.py  project_gaussians.py  rasterize.py  sh.py  utils.py  water_splatting.py  water_splatting_config.py
water_splatting/cuda/: _backend.py
water_splatting/cuda/csrc/: CMakeLists.txt  backward.cu  backward.cuh  bindings.cu  bindings.h  forward.cu  forward.cuh
